Style : checkstyle 포맷팅 - checkstyle 빌드 시 발생하는 스타일 에러 수정